vyre-macros/tests/ui/derive_laws_on_union.stderr
error: #[derive(AlgebraicLaws)] does not support unions. Fix: derive it on the op struct or enum that declares algebraic laws.
 --> tests/ui/derive_laws_on_union.rs:5:7
  |
5 | union BadLawTarget {
  |       ^^^^^^^^^^^^
